se modifica el campo mes del formulario Horas

--- a/views/sueldos/horas.html
+++ b/views/sueldos/horas.html
@@ -10,7 +10,20 @@
             </div>
              <label for="campo_fecha" class="col-sm-3 control-label">Mes</label>
             <div class="col-sm-3">
-                <input type="date" class="form-control" id="campo_fecha" placeholder="Enero">
+                 <select class="form-control">
+                          <option>Enero</option>
+                          <option>Febrero</option>
+                          <option>marzo</option>
+                          <option>Abril</option>
+                          <option>Mayo</option>
+                          <option>Junio</option>
+                          <option>Julio</option>
+                          <option>Agosto</option>
+                          <option>Septiembre</option>
+                          <option>Octubre</option>
+                          <option>Noviembre</option>
+                          <option>Diciembre</option>
+               </select>
             </div>
           </div>
            <div class="form-group">
@@ -83,4 +96,5 @@
                 <input type="integer" class="form-control" id="campo_fecha" placeholder="4">
             </div>
          </div>
+           <button class="btn btn-default" type="submit">Guardar</button>
 </form>
