--- a/views/sueldos/reportes_horas2.html
+++ b/views/sueldos/reportes_horas2.html
@@ -5,7 +5,7 @@
   <div class="form-group">
     <label for="desde" class="col-sm-2 control-label">Nro Legajo</label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="Nro" name="Legajo" placeholder="">
+      <input type="integer" class="form-control" id="Nro" name="Legajo" placeholder="">
     </div>
   </div>
   <div class="form-group">
