--- a/views/sueldos/reportes_horas2.html
+++ b/views/sueldos/reportes_horas2.html
@@ -11,7 +11,20 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Mes</label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="Mes" name="Marzo" placeholder="">
+      <select class="form-control">
+                          <option>Enero</option>
+                          <option>Febrero</option>
+                          <option>Marzo</option>
+                          <option>Abril</option>
+                          <option>Mayo</option>
+                          <option>Junio</option>
+                          <option>Julio</option>
+                          <option>Agosto</option>
+                          <option>Septiembre</option>
+                          <option>Octubre</option>
+                          <option>Noviembre</option>
+                          <option>Diciembre</option>
+          
     </div>
   </div>
   <div class="form-group">
