Nuevas actualizaciones en las vistas

--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 </form>
-<form class="form-horizontal" action="{{=URL(c="ventas", f="confirmar")}}" enctype="multipart/form-data" method="POST">
+<form class="form-horizontal" action="{{=URL(c="ventas", f="agregar_descuento")}}" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         <div class="col-md-10">
           <table class="table table-hover">
