se modificócontrolador detalle-compra y la vistas de ormularios

--- a/views/compra/detalle_compras.html
+++ b/views/compra/detalle_compras.html
@@ -1,37 +1,99 @@
 {{extend 'layout.html'}}
+
 <h1>Detalle de Compras</h1>
-        
-<form class="form-horizontal" action="{{=URL(c="compra", f="lista_detalles")}}" enctype="multipart/form-data" method="POST">
-    <div class="form-group">
-        <label for="produc" class="col-sm-1 control-label">PRODUCTO</label>
-           <div class="col-sm-3">
-                <select class="form-control" id="campo_tipo">
-                  <option>Memoria Ram 2Gb</option>
-                  <option>Disco Rigido 500Gb</option>
-                  <option>Mouse Asus XL-50bs</option>
-                </select>
-           </div>
-        <label for="cant" class="col-sm-1 control-label">CANTIDAD</label>
-           <div class="col-sm-1">
-               <input type="number" class="form-control" id="cant" placeholder="Cantidad">
-            </div>
-               <label for="precunit" class="col-sm-2 control-label">PRECIO UNITARIO</label>
-            <div class="col-sm-2">
-               <input type="number" class="form-control" id="precunit" step="0.01" placeholder="Precio Unitario">
-            </div>
+<div class="form-group">
+    <h4>
+        <caption>
+            N° Factura: {{ =numero_factura}}  /  
+            Fecha: {{ =fecha_factura}}  /  
+            Proveedor: {{ =registro_proveedor.razon_social}}  /  
+            CUIT: {{ =registro_proveedor.cuit}}
+        </caption>
+    </h4>
+</div>
+
+<div class="row">
+    <div class="col-sm-2">
+    {{=producto_temporal}}
     </div>
-   
-                <label for="campo_tipo" class="col-sm-2 control-label">DESCUENTO</label>
-             <div class="col-sm-2">
-                 <select class="form-control" id="campo_tipo">
-                    <option>%0</option>
-                    <option>%10</option>
-                    <option>%15</option>
-                    <option>%25</option>
-                 </select>
-             </div>
+</div>
+
+
+<div class="form-group">
+    <div class="col-md-12">
+        <form method="POST" action="{{=URL(c="compra", f="detalle_compras")}}" name=" ">
+            <table class="table table-hover">
+                <caption>Lista de Detalles </caption>
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th class="">Producto</th>
+                            <th>Cantidad</th>
+                            <th>Precio Unitario</th>
+                            <th>Sub-Total</th>
+                            <th>IVA</th>
+                            <th>Total</th>
+                            <th>Opciones</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {{for i, item in enumerate(items_compra):}}
+                        <tr id="{{=i}}">
+                            <th scope="row">{{=item["id_producto"]}}</th>
+                            <td >{{=item["detalle_producto"]}}</td>
+                            <td align="center">
+                                <input type="text" style="width:60px; text-align:center;" class="integer" value="{{=item['cantidad']}}" name="cantidad[]">
+                                <input type="hidden" value="{{=item['id_producto']}}" name="item[]">
+                            </td>
+                            <td align="center">{{=item["precio_producto"]}}</td>
+                            <td align="center">{{=item["precio_producto"] * item["cantidad"]}}</td>
+                            <td align="center">{{=item["precio_producto"] * item["cantidad"] * 0.105}}</td>
+                            <td align="center">{{=item["precio_producto"] * item["cantidad"]  * 1.105}}</td>
+                            <td>
+                                <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="detalle_compras",vars={"indice": i,"accion":"eliminar_item"})}}">ELIMINAR</a>
+                            </td>
+                        </tr>
+                         {{pass}}
+                    </tbody>
+            </table>
+            <input type="submit" value="GUARDAR" name="modificar" class="btn btn-default" role="button">
+        </form>
+    </div>
+</div>
+
     <div class="form-group">
         <div class="col-md-3">
-             <button type="submit" class="btn btn-default">MOSTRAR LISTA</button>
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <th scope="row">Totales:</th>
+                        <th scope="row">Total Neto:</th>
+                        <th scope="row">IVA:</th>
+                        <th scope="row">Total Bruto:</th>
+                    </tr>
+                    <tr>
+                        <td align="center">$</td>
+                        <td align="center">$ {{=total_neto}}</td>
+                        <td align="center">$ {{=iva}}</td>
+                        <td align="center">$ {{=total_bruto}}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
+<br><br><br>
+    <center>
+        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="compra_guardada",vars={"id":1,"nombre":"mark"})}}">CONFIRMAR</a>
+        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="detalle_compras",vars={"id":1,"nombre":"mark"})}}">CANCELAR</a>
+        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="formulario_compras",vars={"id":1,"nombre":"mark"})}}">ATRAS</a>
+    </center>
+
+<br><br><br>
+    
+    <center>
+		<footer>
+			<small>Sistema Contable Módulo Compras Sector Detalle Compras</small>
+			<address>AdminWebPro</address>
+		</footer>
+	</center>
