--- a/views/compra/formulario_compras.html
+++ b/views/compra/formulario_compras.html
@@ -1,47 +1,40 @@
 {{extend 'layout.html'}}
 <h1>Formulario de Compras</h1>
 
-
 <body>
     <br>
-    <form class="form-horizontal">
-   
+    <form class="form-horizontal"  action="{{=URL(c="compra", f="detalle_compras")}}" enctype="multipart/form-data" method="POST">
+
         <div class="form-group">
             <label for="razon_social" class="col-sm-2 control-label">Proveedor</label>
             <div class="col-sm-3">
                <select class="form-control" id="campo_proveedor" name="id_proveedor">
                   {{for registro_proveedor in lista_proveedores:}}
-
-                  <option value="{{=registro_proveedor.id_proveedor}}">		 
-		  {{=registro_proveedor.razon_social}}
-		  </option>
-
+                  <option value="{{=registro_proveedor.id_proveedor}}">{{=registro_proveedor.razon_social}}</option>
                   {{pass}}
                 </select>
             </div>
 
-
             <label for="numero_factura" class="col-sm-2 control-label">N°: Factura</label>
             <div class="col-sm-3">
-                <input type="integer" class="form-control" id="numero_factura" name= "numero_factura" placeholder="000000000000">
+                <input type="integer" class="form-control" id="numero_factura" name="numero_factura" placeholder="000000000000">
             </div>
         </div>
-        
 
         <div class="form-group">
             <label for="tipo_factura" class="col-sm-2 control-label">Tipo de Factura</label>
             <div class="col-sm-3">
-                <select class="form-control" id= "factura" name= "tipo_factura">
+                <select class="form-control" id="factura" name="tipo_factura">
                     <option select value="0">Tipo de Factura</option>
                     <option>Factura A</option>
                     <option>Factura B</option>
                 </select>
             </div>
-	
+
 	<div class="form-group">
             <label for="forma_pago" class="col-sm-2 control-label">Forma de Pago</label>
-            <div class="col-sm-3" id= "pago" name= "forma_pago"> 
-                <select class="form-control" id= pago name= "forma_pago"> 
+            <div class="col-sm-3">
+                <select class="form-control" id="pago" name="forma_pago">
                     <option select value="0">Forma de Pago</option>
                     <option>Efectivo</option>
                     <option>Cheques</option>
@@ -52,7 +45,7 @@
  	   <div class="form-group">
             <label for="tipo_iva" class="col-sm-2 control-label">Tipo de IVA</label>
                 <div class="col-sm-3">
-                    <select class="form-control" id= "iva" name= topo_iva"
+                    <select class="form-control" id="iva" name="tipo_iva">
                         <option select value="0">Elije Tipo de IVA</option>
                         <option>10.5%</option>
                         <option>21%</option>
@@ -64,14 +57,14 @@
         <div class="form-group">
             <label for="fecha_factura" class="col-sm-2 control-label">Fecha Factura</label>
             <div class="col-sm-3">
-                <input type="date" class="form-control" id="fecha_factura" name= "fecha_factura" placeholder="">
+                <input type="date" value="{{=fecha}}" class="form-control" id="fecha_factura" name="fecha_factura" placeholder="">
             </div>
         </div>
 
         <div class="form-group">
             <label for="tipo_insumo" class="col-sm-2 control-label">Tipo de Compra</label>
             <div class="col-sm-3">
-                <select class="form-control" id= "tipo_compra" name= "tipo_compra">
+                <select class="form-control" id="tipo_compra" nombre="tipo_compra">
                     <option select value="0">Elije Tipo de Compra</option>
                     <option>Producto</option>
                     <option>Servicio</option>
@@ -79,16 +72,14 @@
             </div>
         </div>
 
-      
-        <form class="form-horizontal" action="{{=URL(c="compra", f="informe_subdiariob")}}" enctype="multipart/form-data" method="POST">
-        </form>
-    </form>
+        
+    
     
     <center>
-        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="detalle_compras",vars={"id":1,"nombre":"mark"})}}">DETALLE COMPRA</a>
+        <input type="submit" class="btn btn-default" value="DETALLE COMPRA" name="boton_enviar"></a>
         <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="formulario_compras",vars={"id":1,"nombre":"mark"})}}">Cancelar</a>
     </center>
-
+    
     <br>
 
 	<center>
