Se modifica reporte con subtitulo

--- a/views/sueldos/reportes_empleados.html
+++ b/views/sueldos/reportes_empleados.html
@@ -1,8 +1,7 @@
 {{extend 'layout.html'}}
 <h1>Reporte Empleados</h1>
 <table class="table"> 
-    <caption>Optional table caption.
-    </caption>
+    <caption>{{=titulo}}</caption>
     <thead> 
         <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>FE Ingreso</th> </tr> 
     </thead> 
