--- a/views/sueldos/reportes_familiares.html
+++ b/views/sueldos/reportes_familiares.html
@@ -6,8 +6,9 @@
     <thead> 
         <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>Estudia</th> </tr> 
     </thead> 
-        <tbody> <tr> <th scope="row">1</th> <td>1</td> <td>Rodriguez Javier</td> <td>si</td> </tr> <tr> <th scope="row">2</th> <td>2</td> <td>Daruich Leonel</td> <td>si</td> </tr> <tr> <th scope="row">3</th> <td>3</td> <td>Reingart Mariano</td> <td>si</td> 
-        </tr> 
+        <tbody> {{for i, reg_familiar in enumerate(lista_familiar):}}
+            <tr> <th scope="row">{{=i}}</th> <td>{{=reg_familiar.num_legajo}}</td> <td>{{=reg_familiar.nombre}} {{=reg_familiar.apellido}}</td>
+                {{pass}}
        </tbody> 
 </table>
 <form class="form-horizontal" action="{{=URL(c="sueldos", f="reportes_familiares2")}}" enctype="multipart/form-data" method="POST">
