--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -65,6 +65,13 @@
             </div>
     </div>
 
+<div class="form-group">
+            <label for="campo_domicilio" class="col-sm-2 control-label">Domicilio</label>
+            <div class="col-sm-8">
+                <input type="integer" class="form-control" id="domicilio" placeholder="Av Rivas 2233">
+            </div>
+          </div>
+
 </table>
 <form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
       <button type="submit" class="btn btn-default">Siguiente</button>
