--- a/views/sueldos/reportes_horas.html
+++ b/views/sueldos/reportes_horas.html
@@ -13,3 +13,5 @@
            {{pass}}  
        </tbody> 
 </table>
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="reportes_horas2")}}" enctype="multipart/form-data" method="POST">
+      <button type="submit" class="btn btn-default">Regresar a Criterio de búsqueda</button>
