--- a/views/sueldos/reportes_familiares2.html
+++ b/views/sueldos/reportes_familiares2.html
@@ -7,7 +7,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="ordenar"> Familiares menores de 21 años
+          <input type="checkbox" name="familia_menor21"> Familiares menores de 21 años
         </label>
       </div>
     </div>
@@ -17,7 +17,7 @@
         <div class="col-sm-offset-2 col-sm-10">
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="ordenar"> Familiares que estudian
+          <input type="checkbox" name="familia_estudian"> Familiares que estudian
         </label>
       </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="col-sm-offset-2 col-sm-10">
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="ordenar"> Familiares con distinto domicilio
+          <input type="checkbox" name="familiar_distdom"> Familiares con distinto domicilio
         </label>
       </div>
         </div>
