se modificó vista detalle_compras

--- a/views/compra/detalle_compras.html
+++ b/views/compra/detalle_compras.html
@@ -7,13 +7,13 @@
             N° Factura: {{ =numero_factura}}  /  
             Fecha: {{ =fecha_factura}}  /  
             Proveedor: {{ =registro_proveedor.razon_social}}  /  
-            CUIT: {{ =registro_proveedor.cuit}}
+            CUIT: {{ =registro_proveedor.cuit}}  /
         </caption>
     </h4>
 </div>
 
 <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-4">
     {{=producto_temporal}}
     </div>
 </div>
