Subo nuevos cambios a los Modelos las Vistas y los Controladores del modulo Ventas

--- a/views/ventas/confirmar.html
+++ b/views/ventas/confirmar.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <h1 align="center">CONFIRMAR</h1>
-<h4 align="center"> Confirmar venta para {{=reg_cliente.razon_social}}, N° Comprobante {{=nro_cbte}}, por el importe de $ {{=total}}</h4>
+<h4 align="center"> Confirmar venta para {{=reg_cliente.razon_social}}, N° Comprobante {{=nro_cbte}}, Por el importe de $ {{=total}}</h4>
 <div class="form-group">
     <div class="col-sm-5"></div>
      <div class="col-sm-1">
