--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -6,26 +6,26 @@
           <div class="form-group">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">Nro Legajo</label>
             <div class="col-sm-3">
-                <input type="integer" class="form-control" id="campo_nrolegajo" placeholder="0001">
+                <input type="integer" class="form-control" name = "nro_legajo" id="campo_nrolegajo" placeholder="0001">
             </div>
             <label for="campo_fechaegr" class="col-sm-2 control-label">Fecha Egreso</label>
             <div class="col-sm-3">
-                <input type="date" class="form-control" id="campo_fechaegr" placeholder="17/08/2016">
+                <input type="date" class="form-control" name = "fecha_egreso" id="campo_fechaegr" placeholder="17/08/2016">
             </div>
           </div>
 
               <div class="form-group">
             <label for="campo_cuil" class="col-sm-2 control-label">CUIL</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" id="campo_cuil" placeholder="20235554442">
+                <input type="integer" class="form-control" name = "cuil" id="campo_cuil" placeholder="20235554442">
             </div>
             <label for="campo_dni" class="col-sm-2 control-label">DNI</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" id="campo_dni" placeholder="23555444">
+                <input type="integer" class="form-control" name = "dni" id="campo_dni" placeholder="23555444">
             </div>
            <label for="campo_cextra" class="col-sm-2 control-label">Corresponde Hs Extras</label>
             <div class="col-sm-2">
-                <select class="form-control">
+                <select class="form-control" name = "hs_extras">
                           <option>Si</option>
                           <option>No</option>
                </select>
@@ -35,44 +35,43 @@
 <div class="form-group">
             <label for="campo_nya" class="col-sm-2 control-label">Nombres y Apellidos</label>
             <div class="col-sm-8">
-                <input type="integer" class="form-control" id="campo_nya" placeholder="Francisco Angel Perez Ghik">
+                <input type="integer" class="form-control" name = "nya" id="campo_nya" placeholder="Francisco Angel Perez Ghik">
             </div>
           </div>
 
  <div class="form-group">
             <label for="campo_fenac1" class="col-sm-2 control-label">Fecha Nacimiento</label>
             <div class="col-sm-3">
-                <input type="date" class="form-control" id="campo_fenac1" placeholder="01/01/1980">
+                <input type="date" class="form-control" name = "fecha_nacimiento" id="campo_fenac1" placeholder="01/01/1980">
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Lugar Nacimiento</label>
             <div class="col-sm-3">
-                <input type="text" class="form-control" id="campo_lugnac" placeholder="Buenos Aires">
+                <input type="text" class="form-control" name = "lugar_nacimiento" id="campo_lugnac" placeholder="Buenos Aires">
             </div>
           </div>
 
 <div class="form-group">
             <label for="campo_estciv" class="col-sm-2 control-label">Estado Civil</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_estciv" placeholder="Soltero">
+                <input type="text" class="form-control" name = "estado_civil" id="campo_estciv" placeholder="Soltero">
             </div>
             <label for="campo_edad" class="col-sm-2 control-label">Edad</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_edad" placeholder="30">
+                <input type="text" class="form-control" name = "edad" id="campo_edad" placeholder="30">
             </div>
     <label for="campo_cat" class="col-sm-2 control-label">Categoría</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_cat" placeholder="Maestranza">
+                <input type="text" class="form-control" name = "categoria" id="campo_cat" placeholder="Maestranza">
             </div>
     </div>
 
 <div class="form-group">
             <label for="campo_domicilio" class="col-sm-2 control-label">Domicilio</label>
             <div class="col-sm-8">
-                <input type="integer" class="form-control" id="domicilio" placeholder="Av Rivas 2233">
+                <input type="integer" class="form-control" name = "domicilio" id="domicilio" placeholder="Av Rivas 2233">
             </div>
           </div>
 
 </table>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
       <button type="submit" class="btn btn-default">Siguiente</button>
 </form>
