Subo algunos cambios en el modulo ventas

--- a/views/ventas/guardado.html
+++ b/views/ventas/guardado.html
@@ -2,9 +2,7 @@
 <h1 align="center">FINALIZADO</h1>
 <h4 align="center"> Comprobante guardado con exito</h4>
 <div class="form-group">
-     <div class="col-sm-6"></div>
-     <div class="col-sm-1">
+    <div align="center">
          <a href="{{=URL(c="ventas",f="vista_previa", args=[id_venta])}}" class="btn btn-default" role="button">Vista Previa</a>
     </div>
-    <div class="col-sm-5"></div>
 </div>
