--- a/views/ventas/lista_ventas_por_cliente.html
+++ b/views/ventas/lista_ventas_por_cliente.html
@@ -2,7 +2,7 @@
 <h1>LISTADO DE VENTAS POR CLIENTE</h1>
 <form class="form-horizontal">
     <div class="form-group">
-        <div class="col-md-8">
+        <div class="col-md-12">
               <table class="table table-hover">
               <caption>{{=titulo}}</caption>
           <thead>
@@ -10,35 +10,24 @@
                 <th>Fecha</th>
                 <th class="">Cliente</th>
                 <th>Numero de Comprobante</th>
-                <th>Importe</th>
+                <th>Tipo de Comprobante</th>
+                <th>IVA</th>
+                <th>Importe Total</th>
                 <th>Tipo de Pago</th>
             </tr>
           </thead>
         <tbody>
             <tr>
-                <th scope="row">01/08/2016</th>
-                <td>Zia</td>
-                <td>0001</td>
-                <td>1600</td>
+                <th>30/10/2016</th>
+                <td>ZIA </td> 
+                <td>000000001</td>
+                <td>A</td>
+                <td>$189</td>
+                <td>$1790.1</td>
                 <td>Credito</td>
                 <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
             </tr>
-            <tr>
-                <th>03/08/2016</th>
-                <td>Leyendo Vinos</td> 
-                <td>0002</td>
-                <td>1000</td>
-                <td>Credito</td>
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
-            </tr>
-            <tr>
-                <th scope="row">05/08/2016</th>
-                <td>Zia</td>
-                <td>0003</td>
-                <td>1200</td>
-                <td>Credito</td>
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
-            </tr>
+            
         </tbody>
         </table>
       </div>
@@ -48,10 +37,10 @@
        <table class="table table-bordered">
            <tbody>
                <tr> <th scope="row">Cantidad de Ventas</th>
-                    <td>3</td>
+                    <td>1</td>
                </tr>
                <tr> <th scope="row">Valor total del Periodo</th>
-                    <td>3800</td>
+                    <td>$1790.1</td>
                </tr>
             </tbody>
         </table>
