--- a/views/ventas/confirmar.html
+++ b/views/ventas/confirmar.html
@@ -1,10 +1,17 @@
 {{extend 'layout.html'}}
 <h1 align="center">CONFIRMAR</h1>
 <h4 align="center"> Confirmar venta para {{=reg_cliente.razon_social}}, N° Comprobante {{=nro_cbte}}, Por el importe de $ {{=total}}</h4>
-<div class="form-group">
-    <div class="col-sm-5"></div>
-     <div class="col-sm-1">
-         <a href="{{=URL(c="ventas",f="guardado")}}" class="btn btn-default" role="button">ACEPTAR</a>
-         <a href="{{=URL(c="ventas",f="detalle_ventas")}}" class="btn btn-default" role="button">Volver</a>
-     </div>
-</div>
+<form class="form-horizontal" action="{{=URL(c="ventas", f="guardado")}}" enctype="multipart/form-data" method="POST">
+    <div class="form-group">
+        <div align="center">
+          <button type="submit" class="btn btn-default">ACEPTAR</button>
+        </div>
+        </div>
+</form>
+<form class="form-horizontal" action="{{=URL(c="ventas", f="detalle_ventas")}}" enctype="multipart/form-data" method="POST">
+    <div class="form-group">
+        <div align="center">
+          <button type="submit" class="btn btn-default">VOLVER</button>
+        </div>
+        </div>
+</form>
