--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -55,8 +55,9 @@
                 <td align="center">{{=item["precio_venta"] * item["cantidad"] *item["alicuota_iva"]/100.00}}</td>
                 <td align="center">{{=item["precio_venta"] * item["cantidad"] + item["precio_venta"] * item["cantidad"] *item["alicuota_iva"]/100.00}}</td>
                 {{subtotal = subtotal + (item["precio_venta"] * item["cantidad"] + item["precio_venta"] * item["cantidad"] *item["alicuota_iva"]/100.00) }}
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="borrar_item",vars={"id":1})}}">Eliminar</a><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="detalle_ventas",vars={"id":1})}}">Modificar</a></td>
-                </td>
+                <td><form name="limpiar" method="post" action="#">
+<input type="text" name="campo" size="40" maxlength="40" Value="Pulsa para limpiar" onclick="this.value=''";>
+</form></td>
             </tr>
             {{pass}}
         </tbody>
